@@ -28,9 +28,10 @@ version           = 0.88
 Module::Build     = 0.4004
 
 [Prereqs / TestRequires]
-version           = 0.88
-Module::Build     = 0.4004
-Test::Requires    = 0.06
+version             = 0.88
+Module::Build       = 0.4004
+Test::Requires      = 0.06
+Test::Memory::Cycle = 1.06
 
 [Meta::Dynamic::Config]
 
